--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-  <script type="text/javascript" src="sigScript.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+ 
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +21,7 @@
         <input type="text" id="pNumber" name="pNumber">
         <br>
         Unit:<br>
-        <input type="text" id="unit" name="unit">
+        <select id="unit" name="unit"></select>
         <br>
         Work Cell Phone:<br>
         <input type="text" id="workCell" name="workCell">
@@ -39,8 +40,10 @@
     </div>
     <div class="card">
       <div id="signature"></div>
+      <button id="copyButton" style="display: none;" onclick="copySignatureToClipboard()">Copy Signature</button>
     </div>
   </div>
+  <script type="text/javascript" src="sigScript.js"></script>
 </body>
 
 </html>
